# Tubes01_ML

./: .gitignore  README.md  requirements.txt  torch-requirements.txt
src/ffnn/: pyproject.toml
src/ffnn/src/ffnn/: activation.py  ffnn.py  healthcheck.py  layer.py  loss.py  types.py  weight.py
src/notebooks/develop/: bcn-1-testing.ipynb  bcn-2-torch.ipynb  bcn-3-sklearn.ipynb
